# SpinLab

./: CLUSTER_EXPANSION_GUIDE.md  DEVELOPMENT_SUMMARY.md  FIXES_SUMMARY.md  Fe_BCC_SpinLab_Test.ipynb  LICENSE  MANIFEST.in  PARALLEL_MC_GUIDE.md  PYPI_PUBLISHING.md  README.md  RESOURCE_FIX_GUIDE.md  benchmark_speed.py  check_threading.py  cleanup_gnn.sh  clear_cache.py  detailed_speed_test.py  install_dependencies.py  magnetic_system_explorer.ipynb  parallel_mc_example.py  pyproject.toml  quick_speed_test.py  requirements_analysis.txt  test_cluster_expansion.py  test_fix.py  test_fixes.py  test_import_fix.py  test_imports.py  test_installation.py  test_parallel_fix.py  test_parallel_mc.py  test_spinlab.py  visualization_utils.py
examples/: basic_monte_carlo.py  cluster_expansion_example.py  gnn_integration_example.py  numba_performance_demo.py
notebooks/: generic_magnetic_system_explorer.ipynb  magnetic_system_explorer.ipynb
spinlab/: __init__.py  cli.py
spinlab/analysis/: __init__.py  correlation.py  phase_transitions.py  thermodynamics.py  visualization.py
spinlab/core/: __init__.py  fast_ops.py  gnn_hamiltonian.py  hamiltonian.py  monte_carlo.py  neighbors.py  parallel_monte_carlo.py  spin_system.py
spinlab/dynamics/: __init__.py  integrators.py  llg_solver.py
spinlab/fitting/: __init__.py  fit_exchange.py  pair_hamiltonian.py
spinlab/monte_carlo/: __init__.py  monte_carlo.py  parallel_monte_carlo.py
spinlab/optimization/: __init__.py  methods.py  spin_optimizer.py
spinlab/utils/: __init__.py  cluster_expansion.py  constants.py  io.py  performance.py  random.py
